kubernetes/apps/development/strapi-ecom/app/cms/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-ecom-cms
  namespace: development
  labels:
    app.kubernetes.io/name: strapi-ecom
    app.kubernetes.io/component: cms
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 1337
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: strapi-ecom
    app.kubernetes.io/component: cms
