kubernetes/apps/development/strapi-ecom/app/cms/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: strapi-ecom-cms
  namespace: development
  labels:
    app.kubernetes.io/name: strapi-ecom
    app.kubernetes.io/component: cms
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Strapi Ecom"
    gethomepage.dev/icon: "mdi:database-edit"
    gethomepage.dev/group: "Development"
spec:
  hostnames:
    - "strapi-ecom.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: strapi-ecom-cms
          port: 1337
